# llm-test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  _decode_steady_full.py  _live_test.py  _live_test_full.py  _live_test_hiconc.py  _live_test_recalibrated.py  _watch_full.py  aime_stable_pools.json  app.py  build_report.py  build_showcase.py  docker-compose.prod.yml  docker-compose.yml  export_hmtest.py  export_standard.py  hw_snapshot.py  import_hw_snapshot.py  live_bench.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
.claude/: settings.json
.github/: BRANCH_PROTECTION.md  CICD_SETUP_SUMMARY.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pr-labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  labeler.yml  pr-check.yml  release.yml
.streamlit/: config.toml
bench_workspace/: README.md
bench_workspace/scripts/: _decode_steady_full.py  _live_test.py  _live_test_full.py  _live_test_hiconc.py  _live_test_recalibrated.py  _watch_full.py  build_report.py  build_showcase.py  export_hmtest.py  export_standard.py
config/: auth.py  development_settings.py  secrets.py  session_state.py  settings.py  test_config_loader.py  test_types.py
core/: application_scenario.py  batch_test.py  benchmark_runner.py  cancel_state.py  certification_report.py  config_hash.py  consistency_tester.py  dataset_loader.py  dataset_manager.py  effective_bandwidth.py  engine_capture.py  engine_log_parser.py  engine_metrics.py  enhanced_evaluator.py  enhanced_parser.py  error_messages.py  evaluation_report.py  failure_analyzer.py  hardware_fingerprint.py  historical_import.py  history_manager.py  hw_inventory_import.py  hw_snapshot.py  latency_analysis.py  llm_judge.py  metrics.py  model_comparator.py  model_spec.py  mqc_readme.md  prometheus_parser.py  prompt_template.py  publish_gate.py  quality_evaluator.py  rate_limiter.py  reasoning_evaluator.py  request_logger.py  resource_monitor.py  response_cache.py  response_parser.py  result_comparator.py  (+17 more)
core/benchmark/: __init__.py  metrics.py
core/database/: __init__.py  backup.py  connection.py  manager.py  migrations.py  schema.py
core/models/: __init__.py  api_log.py  application_case.py  (+4 more)
docs/: API.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  MIGRATION_GUIDE.md  PROJECT_HEALTH_DASHBOARD.md  PUSH_PLAN.md  README_PHASE3.md  SECURITY.md  SETUP_PRIVATE_REPO.md  dashboard_integration_example.md  improvement_plan.md  new_datasets_guide.md  quality_test_form_evaluation.md  quality_test_improvement_plan.md  quality_testing.md  thinking_models_guide.md  visualization_integration_guide.md  数据展示平台-分层架构设计.md  环境信息采集指南.md  硬件快照采集与导入.md
evaluators/: __init__.py  aime2026_evaluator.py  aime_evaluator.py  answer_parser.py  arc_evaluator.py  arena_hard_evaluator.py  base_evaluator.py  custom_needle_evaluator.py  global_piqa_evaluator.py  gpqa_evaluator.py  gsm8k_evaluator.py  hellaswag_evaluator.py  humaneval_evaluator.py  longbench_evaluator.py  math500_evaluator.py  mbpp_evaluator.py  mmlu_evaluator.py  needle_haystack_evaluator.py  open_ended_evaluator.py  swebench_evaluator.py  truthfulqa_evaluator.py  winogrande_evaluator.py  yaml_evaluator.py
scripts/: check_compat.py  check_ui.py  compare_tokens.py  debug_api.py  debug_import.py  debug_model_name.py  demo_error_messages.py  download_datasets.py  find_chinese.py  fix_remaining.py  lint_changed.py  prepare_tokenizers.py  quality.sh  quick_test.py  test_cache_hit.py  test_database_system.py  test_static_chart.py  test_tokenizer_load.py  translate_all.py  translate_phase2.py  translate_phase3.py  translate_phase4.py  translate_phase5.py  translate_reports.py  verify_bridge.py  verify_final.py  verify_fix.py  verify_time_metrics.py
standards/: 测试数据字段标准.md
task_configs/: aime2025.yaml  gpqa.yaml  gsm8k.yaml  humaneval.yaml  mmlu.yaml
tests/: conftest.py  e2e_app_smoke.py  e2e_playwright_real_api.py  e2e_playwright_real_api_long_context.py  e2e_playwright_real_api_prefill.py  test_answer_parser.py  test_application_case_collection.py  test_application_case_model.py  test_application_cases_db.py  test_application_scenario.py  test_benchmark_metrics.py  test_benchmark_runner.py  test_cancel_state.py  test_capability_sheet.py  test_config_hash.py  test_design_system.py  test_e2e_app_smoke_runner.py  test_engine_capture.py  test_engine_log_parser.py  test_engine_metrics.py  test_failure_analyzer.py  test_hardware_fingerprint.py  test_historical_import.py  test_hw_inventory_import.py  test_hw_snapshot.py  test_insights.py  test_kv_budget_adaptive.py  test_latency_analysis.py  test_lint_changed.py  test_llm_judge.py  test_metrics.py  test_model_spec.py  test_onboarding.py  test_performance_metric_sanitizing.py  test_prometheus_parser.py  test_prompt_suffix_pool.py  test_provider_stream_parser.py  test_providers.py  test_publish_gate.py  test_quality_evaluator.py  (+32 more)
tools/: make_hw_memory_json.py  make_hw_snapshot_bundle.py
ui/: advanced_panels.py  application_case_form.py  batch_test.py  charts.py  comparison_page.py  components.py  dashboard_components.py  dataset_manager.py  design_system.py  env_overview.py  evaluation_dashboard.py  export.py  formatters.py  history_browser.py  icons.py  insights.py  log_viewer.py  markdown_summary.py  metric_sanitizer.py  onboarding.py  page_layout.py  quality_reports.py  realtime_dashboard.py  reports.py  sidebar.py  static_chart_generator.py  status.py  styled_tables.py  test_control_panel.py  test_panels.py  test_runner.py  thinking_components.py  warehouse_browser.py  warehouse_panels.py  warehouse_report.py
utils/: custom_config.py  dataset_downloader.py  diverse_content_generator.py  download_aime2025.py  download_arena_hard.py  download_global_piqa.py  download_longbench.py  download_mimo_tokenizer.py  download_new_datasets.py  get_logger.py  helpers.py  log_sanitizer.py  log_server.py  logger.py  preset_manager.py  test_config_manager.py  verify_mimo_tokenizer.py
(+70 files in other folders)
